--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Mediawiki Collection extension",
   "scripts": {
-    "test": "jshint . && jscs ."
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
@@ -11,7 +11,10 @@
   },
   "license": "GPLv2",
   "devDependencies": {
-    "jscs": "1.13.1",
-    "jshint": "2.8.0"
+    "grunt": "0.4.5",
+    "grunt-cli": "0.1.13",
+    "grunt-jsonlint": "1.0.4",
+    "grunt-contrib-jshint": "0.11.2",
+    "grunt-jscs": "1.8.0"
   }
 }
