--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
 	"license" : "GPL-2.0+",
 
 	"require": {
-		"composer/installers" : ">=1.0.1",
-		"mediawiki/mediawiki" : ">=1.25"
+		"composer/installers" : ">=1.0.1"
 	},
 	"config": {
 		"prepend-autoloader": false,
