--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "GPLv2",
   "devDependencies": {
     "grunt": "0.4.5",
+    "grunt-banana-checker": "0.5.0",
     "grunt-cli": "0.1.13",
     "grunt-jsonlint": "1.0.7",
     "grunt-contrib-jshint": "0.11.3",
