--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "license": "GPLv2",
   "devDependencies": {
-    "grunt": "0.4.5",
+    "grunt": "1.0.1",
     "grunt-banana-checker": "0.5.0",
-    "grunt-cli": "0.1.13",
-    "grunt-jsonlint": "1.0.7",
-    "grunt-contrib-jshint": "0.11.3",
-    "grunt-jscs": "1.8.0"
+    "grunt-eslint": "19.0.0",
+    "grunt-jsonlint": "1.1.0",
+    "grunt-stylelint": "0.7.0",
+    "stylelint-config-wikimedia": "0.4.1",
+    "eslint-config-wikimedia": "0.3.0"
   }
 }
