--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"license": "GPLv2",
 	"devDependencies": {
+		"eslint-config-wikimedia": "0.3.0",
 		"grunt": "1.0.1",
 		"grunt-banana-checker": "0.6.0",
 		"grunt-eslint": "19.0.0",
