--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
 		"grunt-eslint": "19.0.0",
 		"grunt-jsonlint": "1.1.0",
 		"grunt-stylelint": "0.7.0",
-		"stylelint-config-wikimedia": "0.4.1",
-		"eslint-config-wikimedia": "0.3.0"
+		"stylelint-config-wikimedia": "0.4.1"
 	}
 }
