--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,13 @@
 	"config": {
 		"prepend-autoloader": false,
 		"optimize-autoloader": true
+	},
+	"require-dev": {
+		"jakub-onderka/php-parallel-lint": "0.9.2"
+	},
+	"scripts": {
+		"test": [
+			"parallel-lint . --exclude vendor"
+		]
 	}
 }
