--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 		"optimize-autoloader": true
 	},
 	"require-dev": {
-		"jakub-onderka/php-parallel-lint": "0.9.2"
+		"jakub-onderka/php-parallel-lint": "0.9.2",
+		"jakub-onderka/php-console-highlighter": "0.3.2"
 	},
 	"scripts": {
 		"test": [
