--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
 	"require-dev": {
 		"jakub-onderka/php-parallel-lint": "0.9.2",
 		"jakub-onderka/php-console-highlighter": "0.3.2",
-		"mediawiki/mediawiki-codesniffer": "0.8.1"
+		"mediawiki/mediawiki-codesniffer": "0.10.1"
 	},
 	"scripts": {
 		"fix": "phpcbf",
 		"test": [
-			"parallel-lint . --exclude vendor",
+			"parallel-lint . --exclude vendor --exclude node_modules",
 			"phpcs -p -s"
 		]
 	}
