build: mark package.json as private
We do not release a npm package for this repository, the package.json
is solely for CI/build purposes.
Add private: true
Drop name, version, description

Change-Id: I3da11273ff7876e83fdb278a504f9b1589e69991

--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
-	"name": "wikimedia-collection",
-	"version": "0.0.0",
-	"description": "Mediawiki Collection extension",
+	"private": true,
 	"scripts": {
 		"test": "grunt test"
 	},
