Use SPDX 3.0 license identifier
SPDX released version 3 of their license list (<https://spdx.org/licenses/>),
which changed the FSF licenses to explicitly end in -only or -or-later
instead of relying on an easy to miss + symbol.

Bug: T183858
Change-Id: I893748239eaf40059f5e9dcdd094aeae300243db

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "mediawiki-extension",
 	"description": "The Collection extension allows users to collect articles and generate downloadable versions in different formats (PDF, OpenDocument, Text, etc.) for article collections and single articles.",
 	"homepage": "http://www.mediawiki.org/wiki/Extension:Collection",
-	"license": "GPL-2.0+",
+	"license": "GPL-2.0-or-later",
 	"require": {
 		"composer/installers": ">=1.0.1"
 	},
