build: Updating npm dependencies
* eslint-config-wikimedia: 0.11.0 → 0.15.0
  The following rules are failing and were disabled:
  * no-redeclare

* grunt-eslint: 21.0.0 → 22.0.0
* grunt-stylelint: 0.9.0 → 0.13.0
* stylelint-config-wikimedia: 0.4.2 → 0.8.0

Additional changes:
* Remove direct "stylelint" dependency in favor of "grunt-stylelint".
* Also sorted "composer fix" command to run phpcbf last.
* Removing manual reportUnusedDisableDirectives for eslint.

Change-Id: I618b52cea2534f6fb697c306161fae521e07d4b0

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
 		"no-alert": 0,
 		"no-use-before-define": 0,
 		"vars-on-top": 0,
-		"one-var": 0
+		"one-var": 0,
+		"no-redeclare": "warn"
 	}
 }
