build: Updating npm dependencies
* eslint-config-wikimedia: 0.16.2 → 0.17.0
  The following rules are failing and were disabled:
  * no-shadow

* grunt: 1.2.1 → 1.3.0

Change-Id: I854b830aaa018d1d02990a27fefe565cd7bb55a5

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
 		"no-use-before-define": 0,
 		"vars-on-top": 0,
 		"one-var": 0,
-		"no-redeclare": "warn"
+		"no-redeclare": "warn",
+		"no-shadow": "warn"
 	}
 }
