--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
 		"composer/installers": ">=1.0.1"
 	},
 	"config": {
+		"allow-plugins": {
+			"composer/installers": true
+		},
 		"prepend-autoloader": false,
 		"optimize-autoloader": true
 	},
