--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
 	"root": true,
 	"extends": [
 		"wikimedia",
+		"wikimedia/client-es6",
 		"wikimedia/mediawiki"
 	],
 	"env": {
@@ -14,6 +15,8 @@
 	"rules": {
 		"camelcase": 0,
 		"no-alert": 0,
+		"no-var": 0,
+		"mediawiki/no-nodelist-unsupported-methods": 0,
 		"no-use-before-define": 0,
 		"no-redeclare": "warn",
 		"no-shadow": "warn"
